# CMakeDemos

creatingProject/: CMakeLists.txt  prog.cpp
creatingProject/include/: CMakeLists.txt  Message.h
creatingProject/include/subdir/: CMakeLists.txt  Message2.h
creatingProject/src/: CMakeLists.txt  Message.cpp
creatingProject/src/subdir/: CMakeLists.txt  Message2.cpp
